# Lino

./: Cargo.toml  README.md  distributions.json
.github/workflows/: blank.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: distro_registry.rs  downloader.rs  env_manager.rs  hash.rs  health.rs  install.rs  lib.rs  models.rs  updates.rs
core/src/backends/: docker.rs  mod.rs  wsl.rs
gui/: index.html  package.json  vite.config.ts
gui/public/icons/: placeholder.txt
gui/src/: main.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
gui/src-tauri/src/assets/: distributions.json
gui/src/ui/: App.tsx  styles.css  types.ts
gui/src/ui/components/: DistroCard.tsx  TopBar.tsx
