[workspace]
members = [
  "core",
  "cli"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Your Org <dev@example.com>"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sysinfo = { version = "0.30", features = ["multithread"] }
clap = { version = "4", features = ["derive"] }
which = "6"
indicatif = "0.17"
bytes = "1"
async-channel = "2"
fs4 = "0.9"
semver = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
futures-util = "0.3"