[package]
name = "ldm-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ldm-core = { path = "../core" }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
tokio = { workspace = true }