[package]
name = "ldm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sysinfo = { workspace = true }
which = { workspace = true }
bytes = { workspace = true }
async-channel = { workspace = true }
fs4 = { workspace = true }
semver = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
futures-util = { workspace = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"