[package]
name = "ldm-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
ldm-core = { path = "../../core" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
 tauri-plugin-shell = "2"
 tokio = { version = "1", features = ["full"] }

[build-dependencies]
 tauri-build = { version = "2" }